--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,233 @@
-span {
-	font-weight: 600;
+/* black #191716 */
+/* white #e8e2db */
+/* yellow #e6af2e */
+/* gray #beb7a4 */
+
+* {
+	margin: 0;
+	padding: 0;	
+	box-sizing: border-box;	
 }
+
+body {
+	font-family: 'Roboto', sans-serif;
+}
+
+/** nav **/
+nav ul {
+	list-style-type: none;
+	border-top: 6px solid #e6af2e;
+	background-color: #191716;
+}
+
+nav ul li a {
+	text-decoration: none;
+	display: block;
+	text-align: center;
+	font-size: 20px;
+	padding: 15px 25px;
+	color: #e6af2e;
+}
+
+nav ul li a:hover {
+	color: #e8e2db;
+}
+
+.logo {
+	display: flex;
+	justify-content: space-between;
+	text-transform: uppercase;
+	color: #191716;
+	background: #e6af2e;
+	font-size: 25px;
+	font-style: italic;
+}
+
+.logo:hover {
+	color: #e6af2e;
+	background-color:#e8e2db; 
+}
+
+.logo .i1 {
+	display: none;
+}
+
+.logo .i2 {
+	margin-left: 15px;
+}
+
+.item {
+		display: none;
+}
+
+/** layout for desktop devices **/
+@media screen and (min-width: 700px) {
+	nav ul {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: baseline;
+		justify-content: space-between;
+	}
+
+	nav ul li {
+		flex:1 0 auto;
+	}
+
+	.logo {
+		display: block;
+		text-align: center;
+	}
+
+	.logo .i1 {
+		display: inline;
+	}
+
+	.logo .i2 {
+		display: none;
+	}
+
+	.item {
+		display: inline;
+	}
+}
+/** end of nav **/
+
+/** banner **/
+#banner {
+	min-height: 90vh;
+	background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
+		url(../images/html.jpg);
+	background-attachment: fixed;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.banner-text {
+	font-size: 30px;
+	text-transform: uppercase;
+	color:#e8e2db;
+	font-style: italic;
+	margin-top: 100px;
+}
+
+.banner-underline {
+	width:220px;
+	border: 3px solid #191716;
+	margin: 10px auto 20px auto;
+}
+
+.banner-btn { 
+	display:flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.banner-btn a {
+	text-decoration: none;
+	display: block;
+	text-align: center;
+
+	font-size: 15px;
+	font-weight: bold;
+	padding: 15px;
+	text-transform: uppercase;
+	margin: 0 10px;
+	background: transparent;
+	color: #e6af2e;
+	border: 2px solid #e6af2e;
+}
+
+.banner-btn a:hover {
+	color: #e8e2db; 
+	background: #e6af2e; 
+}
+/** end of banner **/
+
+/** counter section **/
+#counter {
+	padding: 30px 0;
+	background-color: #beb7a4;
+}
+
+.counter-container {
+	max-width: 90vw;
+	padding: 0 30px;
+	margin: 0,auto;
+}
+
+.counter-text {
+	font-size: 25px;
+	text-transform: uppercase;
+	color:#191716;
+	font-style: italic;
+	margin-bottom: 30px;
+}
+/** end of counter section **/
+
+/** results section **/
+#result {
+	padding: 30px 0;
+	background-color: #e8e2db;
+}
+
+.result-container {
+	max-width: 90vw;
+	padding: 0 30px;
+	margin: 0,auto;
+}
+
+.result-title {
+	font-size: 25px;
+	text-transform: uppercase;
+	color:#191716;
+	font-style: italic;
+	margin-bottom: 30px;
+}
+
+.result-text p {
+	font-weight: 500px;
+	color:#191716;
+}
+
+#result span {
+	font-weight: bold;
+}
+
+/** end of results section **/
+
+/** about section **/
+#about {
+	min-height: 90vh;
+	padding: 30px 0;
+	background-color: whitesmoke;
+}
+
+.about-container {
+	max-width: 90vw;
+	padding: 0 30px;
+	margin: 0,auto;
+}
+
+.about-title {
+	font-size: 25px;
+	text-transform: uppercase;
+	color:#191716;
+	font-style: italic;
+	margin-bottom: 30px;
+}
+/** end of about section **/
+
+/** footer section **/
+#footer {
+	min-height: 5vh;
+	padding: 10px;
+	background-color: #beb7a4;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+/** end of footer section **/
