--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,39 @@ nav ul li a:hover {
 	font-style: italic;
 	margin-bottom: 30px;
 }
+
+#counter input[type=text], select {
+  font-size: 15px; 
+  min-width: 300px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+	text-decoration: none;
+	display: block;
+	text-align: center;
+
+	font-size: 15px;
+	font-weight: bold;
+	padding: 15px;
+	text-transform: uppercase;
+	margin: 0 0;
+	background: transparent;
+	color: #191716;
+	border: 2px solid #191716;
+}
+
+input[type=submit]:hover {
+  background-color: #e6af2e;
+  color: #e8e2db;
+  border: 2px solid #e6af2e;
+}
+
 /** end of counter section **/
 
 /** results section **/
