--- a/css/styles.css
+++ b/css/styles.css
@@ -103,9 +103,12 @@ nav ul li a:hover {
 	background-size: cover;
 	background-repeat: no-repeat;
 	display: flex;
-	flex-direction: column; /* fix for IE11 */
 	align-items: center;
 	justify-content: center;
+}
+
+.banner-title {
+	padding-top: 100px;
 }
 
 .banner-text {
@@ -113,7 +116,7 @@ nav ul li a:hover {
 	text-transform: uppercase;
 	color:#e8e2db;
 	font-style: italic;
-	margin-top: 100px;
+	
 }
 
 .banner-underline {
